@@ -182,10 +182,12 @@ set_vars(struct connection *conn, unsigned char *script)
 	str = get_opt_str("protocol.http.user_agent", NULL);
 	if (*str && strcmp(str, " ")) {
 		unsigned char *ustr, ts[64] = "";
+		/* TODO: Somehow get the terminal in which the
+		 * document will actually be displayed.  */
+		struct terminal *term = get_default_terminal();
 
-		if (!list_empty(terminals)) {
+		if (term) {
 			unsigned int tslen = 0;
-			struct terminal *term = terminals.prev;
 
 			ulongcat(ts, &tslen, term->width, 3, 0);
 			ts[tslen++] = 'x';
