@@ -113,6 +113,7 @@ static VALUE
 erb_module_message(VALUE self, VALUE str)
 {
 	unsigned char *message, *line_end;
+	struct terminal *term;
 
 	str = rb_obj_as_string(str);
 	message = memacpy(RSTRING(str)->ptr, RSTRING(str)->len);
@@ -121,13 +122,14 @@ erb_module_message(VALUE self, VALUE str)
 	line_end = strchr(message, '\n');
 	if (line_end) *line_end = '\0';
 
-	if (list_empty(terminals)) {
+	term = get_default_terminal();
+	if (!term) {
 		usrerror("[Ruby] %s", message);
 		mem_free(message);
 		return Qnil;
 	}
 
-	info_box(terminals.next, MSGBOX_NO_TEXT_INTL | MSGBOX_FREE_TEXT,
+	info_box(term, MSGBOX_NO_TEXT_INTL | MSGBOX_FREE_TEXT,
 		 N_("Ruby Message"), ALIGN_LEFT, message);
 
 	return Qnil;
@@ -144,6 +146,7 @@ erb_stdout_p(int argc, VALUE *argv, VALUE self)
 {
 	int i;
 	struct string string;
+	struct terminal *term;
 
 	if (!init_string(&string))
 		return Qnil;
@@ -174,13 +177,14 @@ erb_stdout_p(int argc, VALUE *argv, VALUE self)
 		add_bytes_to_string(&string, ptr, len);
 	}
 
-	if (list_empty(terminals)) {
+	term = get_default_terminal();
+	if (!term) {
 		usrerror("[Ruby] %s", string.source);
 		done_string(&string);
 		return Qnil;
 	}
 
-	info_box(terminals.next, MSGBOX_NO_TEXT_INTL | MSGBOX_FREE_TEXT,
+	info_box(term, MSGBOX_NO_TEXT_INTL | MSGBOX_FREE_TEXT,
 		N_("Ruby Message"), ALIGN_LEFT, string.source);
 
 	return Qnil;
